# git-repo-move

./: .gitignore  LICENSE  README.md  ci.yml  pyproject.toml
.github/workflows/: ci.yml
git_repo_move/: cli.py  gitinfo.py  keepfiles.py  shellscript.py
test/: test_keepfiles.py
