[tool.poetry]
name = "git-repo-move"
version = "1.0.0"
description = "Move files from one git repo to another, preserving history"
authors = ["Alan Rosenthal <1288897+AlanRosenthal@users.noreply.github.com>"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.1.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"
black = "^20.8b1"
pylint = "^2.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
git-repo-move = "git_repo_move.cli:main"
